--- a/index.html
+++ b/index.html
@@ -1,19 +1,118 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <title>Great Idea! - Fully Responsive!</title>
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
 
-<body>
-<!-- Use your own code or past solution for Great Idea Web Page HTML here! -->
-</body>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+    <div class="container">
+      <nav class="row">
+        <a href="services.html">Services</a> <a href="#">Product</a>
+        <a href="#">Vision</a> <a href="#">Features</a> <a href="#">About</a>
+        <a href="#">Contact</a>
+
+        <figure>
+          <img
+            class="logo"
+            src="img/logo.png"
+            alt="Great Idea! Company logo."
+          />
+        </figure>
+      </nav>
+
+      <header class="row bottom-line">
+        <div class="half-column">
+          <h1 class="header-styles">Innovation</h1>
+          <h1 class="header-styles">On</h1>
+          <h1 class="header-styles">Demand</h1>
+          <button>Get Started</button>
+        </div>
+        <figure class="half-column">
+          <img src="img/header-img.png" alt="Image of a code snippet." />
+        </figure>
+      </header>
+
+      <section class="row">
+        <div class="half-column">
+          <h2 class="header-styles">Features</h2>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+        <div class="half-column">
+          <h2 class="header-styles">About</h2>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+      </section>
+      <figure class="row">
+        <img
+          class="middle-img"
+          src="img/mid-page-accent.jpg"
+          alt="Image of code snippets across the screen"
+        />
+      </figure>
+
+      <section class="row bottom-line">
+        <div class="third-column">
+          <h2 class="header-styles">Services</h2>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+        <div class="third-column">
+          <h2 class="header-styles">Product</h2>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+        <div class="third-column">
+          <h2 class="header-styles">Vision</h2>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+      </section>
+
+      <address>
+        <h2>Contact</h2>
+        <p>123 Way 456 Street</p>
+        <p>Somewhere, USA</p>
+        <p class="top-space">1 (888) 888-8888</p>
+        <p class="top-space">sales@greatidea.io</p>
+      </address>
+
+      <footer><p>Copyright Great Idea! 2018</p></footer>
+    </div>
+  </body>
 </html>
