--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#">Vision</a> <a href="#">Features</a> <a href="#">About</a>
         <a href="#">Contact</a>
 
-        <figure>
+        <figure id="order">
           <img
             class="logo"
             src="img/logo.png"
