added media queries for smartphone breakpoint

--- a/index.html
+++ b/index.html
@@ -19,21 +19,16 @@
   </head>
 
   <body>
+    <nav class="row">
+      <a href="services.html">Services</a> <a href="#">Product</a>
+      <a href="#">Vision</a> <a href="#">Features</a> <a href="#">About</a>
+      <a href="#">Contact</a>
+
+      <figure id="order">
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
+      </figure>
+    </nav>
     <div class="container">
-      <nav class="row">
-        <a href="services.html">Services</a> <a href="#">Product</a>
-        <a href="#">Vision</a> <a href="#">Features</a> <a href="#">About</a>
-        <a href="#">Contact</a>
-
-        <figure id="order">
-          <img
-            class="logo"
-            src="img/logo.png"
-            alt="Great Idea! Company logo."
-          />
-        </figure>
-      </nav>
-
       <header class="row bottom-line">
         <div class="half-column">
           <h1 class="header-styles">Innovation</h1>
@@ -105,7 +100,7 @@
       </section>
 
       <address>
-        <h2>Contact</h2>
+        <h2 class="header-styles">Contact</h2>
         <p>123 Way 456 Street</p>
         <p>Somewhere, USA</p>
         <p class="top-space">1 (888) 888-8888</p>
